--- a/28-10.md
+++ b/28-10.md
@@ -1,1 +1,3 @@
 * Catalogo não é arquivo, é um dicionário de dados;
+
+* Se criar um banco de dadosOracle de 5T, é criado um arquivo de 5T (data.dbf) mesmo que esteja vazio;
