--- a/28-10.md
+++ b/28-10.md
@@ -1,3 +1,7 @@
 * Catalogo não é arquivo, é um dicionário de dados;
 
 * Se criar um banco de dadosOracle de 5T, é criado um arquivo de 5T (data.dbf) mesmo que esteja vazio;
+.
+
+
+ora 200025 o control file não conseguiu levantar as informações
