--- a/04-11.md
+++ b/04-11.md
@@ -1,1 +1,1 @@
-Indice: É uma forma de ordenação de colunas para facilitar a consulta. Uma estrutura auxiliar.
+Indice: É uma forma de ordenação de colunas para facilitar a consulta. Uma estrutura auxiliar. Duplica a tabela.
